# langchain-playground

./: README.md  docker-compose.yaml  install_package.sh  requirements.txt
.devcontainer/: devcontainer.json
projects/agent-debating/: README.md  docker-compose.yaml  requirements.txt
projects/agent-debating/config/: group.yaml
projects/agent-debating/cookbook/: sample.ipynb
projects/agent-debating/src/: _utils.py  simulator.py
projects/agent-debating/src/prompts/: agents.py  moderator.py  participants.py
projects/company-summary/: .flake8  Dockerfile  README.md  docker-compose.yaml  export2requirements.sh  pyproject.toml  requirements.txt
projects/company-summary/modules/embeddings/: pdf2faiss.py  text2faiss.py  utils.py
projects/sample/: .env.sample  Dockerfile  README.md  install_package.sh  requirements.txt
projects/sample/.devcontainer/: devcontainer.json
